--- a/chrome/locale/en-US/options.dtd
+++ b/chrome/locale/en-US/options.dtd
@@ -4,10 +4,9 @@
 <!ENTITY robustlinks.preferences.archiveonadd "Archive on add">
 <!ENTITY robustlinks.preferences.yes.label "Yes">
 <!ENTITY robustlinks.preferences.no.label "No">
-<!ENTITY robustlinks.preferences.whicharchive "Archive to use">
+<!ENTITY robustlinks.preferences.whicharchive "Archive to use by default">
 <!ENTITY robustlinks.preferences.advanced.title    "Advanced Options - Use With Care">
 <!ENTITY robustlinks.preferences.always.urir "Always assume original resource">
-<!ENTITY robustlinks.preferences.whicharchive "Archive to use">
 <!ENTITY robustlinks.preferences.archiveorg.label "Internet Archive">
 <!ENTITY robustlinks.preferences.archivetoday.label "Archive.Today">
 <!ENTITY robustlinks.preferences.random.label "random">
